--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -30,9 +30,9 @@ html body {
   font-size: 60px;
   color: #ffffff;
   font-weight: bold;
-  font-family: Comic Sans MS;
+  font-family: 'Fugaz One', cursive;
   margin: 0;
-  margin-left: 10px;
+  margin-left: 25px;
 }
 
 .devise_container {
@@ -85,39 +85,40 @@ allication.html.erbのcss
 
 .header_container {
   width: 100%;
-  background-color: #18bc9c;
+  background-color: #ffffff;
 }
 
 .logo {
   font-size: 40px;
   font-weight: bold;
-  font-family: Comic Sans MS;
+  font-family: 'Fugaz One', cursive;
   margin-left: 10px;
+  padding-right: 10px;
 }
 
 .logo a {
-  color: #ffffff;
+  color: #000000;
 }
 
 .logo a:hover {
   text-decoration: none;
-  color: #ffffff;
+  color: #000000;
 }
 
 .navi {
-  line-height: 4;
+  line-height: 2;
 }
 
 
 .navi a {
-  color: #ffffff;
+  color: #000000;
   margin-left: 10px;
-  font-size: 15px;
+  font-size: 12px;
 }
 
 .navi a:hover {
-  color: #ffffff;
-  font-size: 15px;
+  color: #000000;
+  font-size: 12px;
 }
 
 .footer_container {
@@ -4173,7 +4174,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav > li > a {
   position: relative;
   display: block;
-  padding: 10px 15px;
+  padding: 5px 15px;
 }
 .nav > li > a:hover,
 .nav > li > a:focus {
@@ -4485,10 +4486,10 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   position: relative;
   float: right;
   padding: 9px 10px;
-  margin-top: 8px;
+  margin-top: 15px;
   margin-right: 15px;
   margin-bottom: 8px;
-  background-color: transparent;
+  background-color: #000000;
   background-image: none;
   border: 1px solid transparent;
   border-radius: 4px;
@@ -4516,8 +4517,8 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   margin: 7.5px -15px;
 }
 .navbar-nav > li > a {
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding-top: 5px;
+  padding-bottom: 5px;
   line-height: 20px;
 }
 @media (max-width: 767px) {
@@ -4552,8 +4553,9 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
     float: left;
   }
   .navbar-nav > li > a {
-    padding-top: 15px;
-    padding-bottom: 15px;
+    border: 1px solid;
+    border-radius: 5px;
+    margin-top: 13px;
   }
 }
 .navbar-form {
@@ -4641,6 +4643,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   margin-top: 0;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
+  border: none;
 }
 .navbar-fixed-bottom .navbar-nav > li > .dropdown-menu {
   margin-bottom: 0;
@@ -5015,8 +5018,6 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 }
 .pager li > a:hover,
 .pager li > a:focus {
-  text-decoration: none;
-  background-color: #eee;
 }
 .pager .next > a,
 .pager .next > span {
