--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -8,6 +8,10 @@
 /*-----------------------
 deviseのcss
 ------------------------*/
+/*
+html body {
+  height: 100% !important;
+}*/
 
 html body {
   height: 100% !important;
@@ -23,7 +27,8 @@ html body {
   background-attachment: fixed;
   /* 表示するコンテナの大きさに基づいて、背景画像を調整 */
   background-size: cover;
-  position: relative;
+  /*position: relative;*/
+  /*position: fixed;*/
 }
 
 .message h1 {
@@ -38,18 +43,32 @@ html body {
 .devise_container {
   background-color: #ffffff;
   opacity: 0.9;
-  width: 400px;
-  float: right;
+  /*width: 250px;*/
+  /*float: right;*/
   margin-top: 150px;
-  margin-right: 250px;
-  padding: 20px 30px 20px 30px;
+  /*margin-right: 250px;*/
+  padding: 10px 80px 10px 80px;
+  display: inline-block;
+}
+
+.devise_container_signup {
+  background-color: #ffffff;
+  opacity: 0.9;
+  /*width: 250px;*/
+  /*float: right;*/
+  margin-top: 100px;
+  margin-bottom: 50px;
+  /*margin-right: 250px;*/
+  padding: 10px 40px 10px 40px;
+  display: inline-block;
 }
 
 .message {
-  width: 400px;
+  /*width: 400px;*/
   padding-top: 150px;
-  margin-left:250px;
-  float: left;
+  /*margin-left:250px;*/
+  /*float: left;*/
+  display: inline-block;
 }
 
 .service_message p {
@@ -58,21 +77,46 @@ html body {
   margin-top: 30px;
 }
 
-@media screen and (max-width:480px) {
+@media (max-width:767px) {
   .message {
-  width: 350px;
-  padding-top: 50px;
-  margin: 0 auto;
+  padding-top: 80px;
   }
 
   .devise_container {
-    background-color: #ffffff;
-    opacity: 0.9;
-    width: 400px;
-    margin: 0 auto;
     margin-top: 50px;
   }
+
+  html body {
+    height: auto;
+  }
 }
+
+.message_wrapper {
+  text-align: center;
+}
+
+.devise_wrapper {
+  text-align: center;
+}
+
+.form_btn input, .form_btn a {
+  width: 152px;
+  border: 1px solid;
+  border-radius: 5px;
+  background-color: transparent;
+  padding: 3px 12px;
+  font-size: 12px;
+}
+
+.modal-footer input {
+  width: 152px;
+  border: 1px solid;
+  border-radius: 5px;
+  background-color: transparent;
+  padding: 3px 12px;
+  font-size: 12px;
+}
+
 
 
 /*-----------------------
@@ -1238,6 +1282,8 @@ textarea {
   font-family: inherit;
   font-size: inherit;
   line-height: inherit;
+/*  border: 1px solid #000000;
+  border-radius: 5px;*/
 }
 a {
   color: #337ab7;
@@ -3143,6 +3189,27 @@ select[multiple].input-lg {
 }
 .btn {
   display: inline-block;
+  padding: 3px 12px;
+  margin-bottom: 0;
+  font-size: 12px;
+  font-weight: normal;
+  line-height: 1.5;
+  text-align: center;
+  vertical-align: middle;
+  -ms-touch-action: manipulation;
+      touch-action: manipulation;
+  cursor: pointer;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  border: 1px solid #000000;
+  color: #000000;
+  border-radius: 5px;
+}
+
+/*.btn {
+  display: inline-block;
   padding: 6px 12px;
   margin-bottom: 0;
   font-size: 14px;
@@ -3162,6 +3229,7 @@ select[multiple].input-lg {
   border: 1px solid transparent;
   border-radius: 4px;
 }
+*/
 .btn:focus,
 .btn:active:focus,
 .btn.active:focus,
