--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,7 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body class="wide_screen">
-    <div class="devise_container signup">
+    <div class="devise_wrapper col-xs-12">
+    <div class="devise_container_signup">
     <h2>
       <p class="devise">Sign up</p>
     </h2>
@@ -43,13 +44,14 @@
           <%= f.file_field :avatar, autofocus: true, value: "" %>
         </div>
 
-          <div class="form-group">
-            <%= f.submit "Sign up", class: "btn btn-default" %>
+          <div class="form-group form_btn">
+            <%= f.submit "Sign up" %>
           </div>
       <% end %>
-      <div class="devise">
+      <div class="devise form_btn">
         <%= render "devise/shared/links" %>
       </div>
+    </div>
     </div>
     <footer class="footer_container">
       <!-- <p>copyright2015</p> -->
