--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -5,7 +5,7 @@
 
     <div>
     	<button class="user_delete">
-    	<%= link_to '削除', "/groups/#{@group.id}/users/#{user.id}", method: :delete %>
+    	<%= link_to '削除する', "/groups/#{@group.id}/users/#{user.id}", method: :delete %>
         </button>
     </div>
 </div>
