--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -5,7 +5,8 @@
 
   <% if @groups.blank? %>
     <div class="first_alert">
-      <p>まずは、<a data-toggle="modal" href="#myModal">グループを追加する</a>か、友達に招待してもらいましょう！</p>
+      <p>Shares!は、グループ間で読みたい記事やお店の情報をシェアできるサービスです。</p>
+      <p>まずは、<a data-toggle="modal" href="#myModal">グループを作成</a>するか、すでにグループに所属している友人にグループに招待してもらいましょう！</p>
     </div>
   <% end %>
  <!--    <div class="new_group partial">
