--- a/app/views/layouts/default_layout.html.erb
+++ b/app/views/layouts/default_layout.html.erb
@@ -31,6 +31,9 @@
       <ul class="nav navbar-nav navbar-right navi">
         <% if controller.controller_name == "groups" %>
           <li><a data-toggle="modal" href="#myModal">グループを追加する</a></li>
+          <li>
+            <%= link_to '記事検索', "/page_search/" %>
+          </li>
         <% elsif controller.controller_name == "pages" %>
           <li>
             <%#= link_to 'ページを追加する', "/groups/#{@group.id}/pages/new/" %>
@@ -52,6 +55,10 @@
           </li>
           <li>
             <%= link_to 'メンバー追加', "/groups/#{@group.id}/users/invite/" %>
+          </li>
+        <% elsif controller.controller_name == "search" %>
+          <li>
+            <%= link_to '記事検索', "/page_search/" %>
           </li>
         <% end %>
         <li>
