--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -5,7 +5,7 @@
 
   <% if @pages.blank? %>
     <div class="first_alert">
-    <p>グループでシェアする<a data-toggle="modal" href="#myModal">ページを保存 <span class="glyphicon glyphicon-modal-window" aria-hidden="true"></span></a>しましょう！</p>
+    <p>グループでシェアする<a data-toggle="modal" href="#myModal">ページを保存しましょう！</p>
     </div>
   <% end %>
 
@@ -30,7 +30,7 @@
   </div>
   <!-- モーダル終了 -->
 
-<!-- 
+<!--
   <div>
   <%#= form_for [@group, @page] do |f| %>
     <h3>
