--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -14,7 +14,7 @@ html body {
 }*/
 
 html body {
-  height: 100% !important;
+  height: 100%;
 }
 
 .wide_screen {
@@ -59,7 +59,7 @@ html body {
   margin-top: 100px;
   margin-bottom: 50px;
   /*margin-right: 250px;*/
-  padding: 10px 40px 10px 40px;
+  padding: 10px 40px 30px 40px;
   display: inline-block;
 }
 
@@ -6237,6 +6237,7 @@ button.close {
   /*line-height: 1.42857143;*/
   line-height:2;
   font-size: 20px;
+  color: #000000;
 }
 .modal-body {
   position: relative;
@@ -6258,6 +6259,7 @@ button.close {
   padding: 15px;
   text-align: center;
   /*border-top: 1px solid #e5e5e5;*/
+  color: #000000;
 }
 
 .modal-footer .btn + .btn {
