--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -9,11 +9,11 @@
 .partial .page {
   width: 345px;
   height: 250px;
-  margin: 10px 10px 0 10px;
+  margin: 15px 10px 0 10px;
 }
 
 .partial .page_title {
-  width: 360px;
+  width: 345px;
   margin-left: -15px;
   margin-right: -15px;
   padding-left: 15px;
@@ -86,6 +86,14 @@
 }
 
 
+.search_partial .page {
+  width: 360px;
+  height: 250px;
+}
 
+.search_container {
+  width: 1100px;
+  margin: 0 auto;
+}
 
 
