--- a/app/views/groups/_group.html.erb
+++ b/app/views/groups/_group.html.erb
@@ -4,8 +4,8 @@
     <% if  group.avatar_file_name %>
     <div class="background_image" style="background-image: url(<%= group.avatar(:medium) %>)">
     <% else %>
-	<div class"background_no_image" style="background-image: url('/images/no_image.png'); background-size: cover; width: 370px; height: 250px; background-position: center">
-	<% end %>
+  	<div class="background_no_image" style="background-image: url('../images/no_image.png')">
+  	<% end %>
 	  <div class="background_image">
       <p><%= group.name %></p>
       </div>
