aタグとじた

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -5,7 +5,7 @@
 
   <% if @pages.blank? %>
     <div class="first_alert">
-    <p>グループでシェアする<a data-toggle="modal" href="#myModal">ページを保存しましょう！</p>
+      <p>グループでシェアする<a data-toggle="modal" href="#myModal">ページを保存しましょう！</a></p>
     </div>
   <% end %>
 
