--- a/app/assets/stylesheets/groups.scss
+++ b/app/assets/stylesheets/groups.scss
@@ -77,6 +77,12 @@
   background-position: center;
 }
 
+#myModal_search form {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+
 @media (max-width:767px) {
   .partial {
   width: 340px;
