--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -9,28 +9,8 @@
       <p>まずは、<a data-toggle="modal" href="#myModal">グループを作成</a>するか、すでにグループに所属している友人にグループに招待してもらいましょう！</p>
     </div>
   <% end %>
- <!--    <div class="new_group partial">
-      <div class="title group_name">
-          <%#= link_to "/" do %>
-          <div class="background_image" style="background-image: url(<%#= image_tag('no_image.png') %>)">
-          <div class="background_image">
-            <p>新規グループを作成</p>
-            </div>
-          </div>
 
-          <div>
-            <li class="group_delete">
-            <%#= link_to "/groups/#{group.id}", method: :delete do %>
-            <span class="glyphicon glyphicon-trash" aria-hidden="true" style="color: white;" ></span>
-            <%# end %>
-              </li>
-          </div>
-          <%# end %>
-        </div>
-      </div>
-  <%# end %> -->
-
-  <!-- モーダル開始 -->
+  <!-- グループ追加モーダル開始 -->
   <div class="modal fade" id="myModal">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -48,6 +28,23 @@
       		    <%= f.submit "追加" %>
             </div>
           <% end %>
+      </div>
+    </div>
+  </div>
+  <!-- モーダル終了 -->
+
+  <!-- 検索画面モーダル開始 -->
+  <div class="modal fade" id="myModal_search">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button class="close" data-dismiss="modal">&times;</button>
+          <p class="modal-title">キーワードで検索する</p>
+        </div>
+      <%= form_tag("/searches/search", method: :get) do %>
+        <input type="text", autofocus, placeholder="キーワードで検索", name="title", html: {class: "form-controll">
+        <label><input type="submit" value="" id="search"></label>
+      <% end %>
       </div>
     </div>
   </div>
