--- a/app/views/searches/search.html.erb
+++ b/app/views/searches/search.html.erb
@@ -9,5 +9,26 @@
 	  </div>
 	</div>
   <% end %>
+  <% elsif @pages.blank? %>
+  <div style="text-align: center;">
+  <p>検索結果は0件です。もう一度<a data-toggle="modal" href="#myModal_search">検索</a>してみましょう。</p>
+  </div>
   <% end %>
   </div>
+
+    <!-- 検索画面モーダル開始 -->
+  <div class="modal fade" id="myModal_search">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button class="close" data-dismiss="modal">&times;</button>
+          <p class="modal-title">キーワードで検索する</p>
+        </div>
+      <%= form_tag("/searches/search", method: :get) do %>
+        <input type="text", autofocus, placeholder="キーワードで検索", name="title", html: {class: "form-controll">
+        <label><input type="submit" value="" id="search"></label>
+      <% end %>
+      </div>
+    </div>
+  </div>
+  <!-- モーダル終了 -->
