--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -232,6 +232,12 @@ li.search a {
 li.search a:hover {
   color: transparent!important;
 }
+
+.facebook_login img {
+  width: 152px;
+  margin-bottom: 15px;
+}
+
 @media (max-width:767px) {
   .name {
     display: none;
