--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -210,17 +210,32 @@ allication.html.erbのcss
   font-size: 18px;
 }
 
-/*.keyword {
+.keyword {
   margin-top: 13px;
 }
 
 .keyword input {
-  border-radius: 5px;
-  border: 1px solid #000000;
-  text-align: center;
-}*/
+  border: 1px solid #74757F;
+  width: 200px;
+  margin-left: 20px;
+  padding-left: 25px;
+}
 
-li.search span {
+.keyword_search {
+    position: relative;
+}
+
+/* style icon */
+.keyword_search .glyphicon {
+  position: absolute;
+  padding-left: 27px;
+  padding-top: 10px;
+  pointer-events: none;
+  color: #74757F;
+}
+
+
+/*li.search span {
   zoom: 1.3;
   padding-top: 3px;
 }
@@ -231,7 +246,7 @@ li.search a {
 
 li.search a:hover {
   color: transparent!important;
-}
+}*/
 
 .facebook_login img {
   width: 152px;
