--- a/app/views/layouts/default_layout.html.erb
+++ b/app/views/layouts/default_layout.html.erb
@@ -14,12 +14,18 @@
   <div class="container-fluid container">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
+
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
+      <div class="search sp_search">
+      <a data-toggle="modal" href="#myModal_search">
+        <span class="glyphicon glyphicon-search" aria-hidden="true" style="color: black;"></span>
+      </a>
+    </div>
       <div class="logo"><a href="/">Shares!</a></div>
     </div>
 
@@ -30,7 +36,7 @@
       </div> -->
       <ul class="nav navbar-nav navbar-right navi">
         <% if controller.controller_name == "groups" %>
-           <li class="keyword">
+           <li class="keyword pc_search">
             <%#= link_to '記事検索', "/searches/" %>
             <%= form_tag("/searches/search", method: :get) do %>
               <div class="keyword_search">
@@ -40,11 +46,7 @@
               </div>
             <% end %>
           </li>
-          <!--<li class="search">
-            <a data-toggle="modal" href="#myModal_search">
-              <span class="glyphicon glyphicon-search" aria-hidden="true" style="color: black;"></span>
-            </a>
-          </li> -->
+
           <li><a data-toggle="modal" href="#myModal">グループを追加する</a>
           </li>
 
