--- a/app/views/layouts/default_layout.html.erb
+++ b/app/views/layouts/default_layout.html.erb
@@ -41,7 +41,7 @@
             <%= form_tag("/searches/search", method: :get) do %>
               <div class="keyword_search">
               <i class="glyphicon glyphicon-search"></i>
-              <input type="text", placeholder="キーワードから検索", name="title">
+              <input type="text", placeholder="キーワードで検索", name="title">
               <label><input type="submit" value="" id="search"></label>
               </div>
             <% end %>
