--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -29,6 +29,7 @@
 
 .partial .page_title a {
   color: #000000;
+  height: 100%;
   width: 100%;
   display: -webkit-box;
   -webkit-box-orient: vertical;
@@ -40,6 +41,7 @@
 .partial .page_title a:hover {
   text-decoration: underline;
 }
+
 
 .page_elements {
   margin: 0 auto;
