--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,6 +1,12 @@
 
 <div class="user_partial_index col-sm-4">
-	<div class="user_image"><%= image_tag("#{user.avatar(:thumb)}") %></div>
+	<div class="user_image">
+		<% if user.fb_image.blank? %>
+			<%= image_tag("#{user.avatar(:thumb)}") %>
+		<% else %>
+			<%= image_tag("#{user.fb_image}") %>
+		<% end %>
+	</div>
 	<div class="user_name"><%= user.nickname %></div>
 
    	<%= button_to '削除する', "/groups/#{@group.id}/users/#{user.id}", method: :delete, class: "user_delete" %>
