--- a/app/views/users/invite.html.erb
+++ b/app/views/users/invite.html.erb
@@ -9,7 +9,13 @@
   <% @users.each do |user| %>
     <div class="user clearfix">
     <div class="user_partial_invite col-xs-4">
-      <div class="user_image"><%= image_tag("#{user.avatar(:thumb)}") %><br /></div>
+      <div class="user_image">
+        <% if user.fb_image.blank? %>
+          <%= image_tag("#{user.avatar(:thumb)}") %>
+        <% else %>
+          <%= image_tag("#{user.fb_image}") %>
+        <% end %>
+      </div>
       <div class="user_name"><%= user.nickname %></div>
       <%= form_tag("/groups/#{@group.id}/users/add", method: :post) do %> <!-- userのidとgroupのidを連携 -->
         <%= hidden_field_tag(:user_id, user.id) %>
