--- a/app/views/pages/_page.html.erb
+++ b/app/views/pages/_page.html.erb
@@ -3,6 +3,13 @@
     <%= link_to "#{page.title}", "#{page.url}", target: "_blank" %>
   </div>
     <div>
+      <div class="avatar_image">
+        <% if page.user.fb_image.blank? %>
+          <%= image_tag("#{page.user.avatar(:small)}") %>
+        <% else %>
+          <%= image_tag("#{page.user.fb_image}") %>
+        <% end %>
+      </div>
       <li class="page_delete">
       <%= link_to "/groups/#{@group.id}/pages/#{page.id}", method: :delete do %>
       <span class="glyphicon glyphicon-trash" aria-hidden="true" style="color: white;"></span>
