--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="row elements">
+  <div class="row group_elements">
     <%= render partial: "group", collection: @groups %>
   </div>
 
@@ -54,3 +54,4 @@
   <a data-toggle="modal" href="#myModal"><%= image_tag'plus.png' %></a>
   </div>
 </div>
+
