--- a/app/views/pages/_page.html.erb
+++ b/app/views/pages/_page.html.erb
@@ -1,7 +1,7 @@
 
 <div class="page_partial col-sm-4 col-xs-12">
   <div class="page_page" style="background-image: url(<%= page.image_url %>); background-size: cover;">
-    <div class="title page_title">
+    <div class="page_title">
       <%= link_to "#{page.title}", "#{page.url}", target: "_blank" %>
     </div>
       <div>
@@ -20,3 +20,4 @@
       </div>
   </div>
 </div>
+
