--- a/app/views/groups/_group.html.erb
+++ b/app/views/groups/_group.html.erb
@@ -1,22 +1,17 @@
-<div class="partial col-sm-4">
-  <div class="title group_name">
+<div class="group_partial col-sm-3">
+  <div class="group_page">
     <%= link_to "/groups/#{group.id}/pages" do %>
-    <% if  group.avatar_file_name %>
-    <div class="background_image" style="background-image: url(<%= group.avatar(:medium) %>)">
-    <% else %>
-  	<div class="background_no_image" style="background-image: url('../images/no_image.png')">
-  	<% end %>
-	  <div class="background_image">
-      <p><%= group.name %></p>
-      </div>
-    </div>
-    <div>
-    	<li class="group_delete">
-    	<%= link_to "/groups/#{group.id}", method: :delete do %>
-			<span class="glyphicon glyphicon-trash" aria-hidden="true" style="color: white;" ></span>
-    	<% end %>
-        </li>
-    </div>
+      <% if  group.avatar_file_name %>
+        <div class="background_image" style="background-image: url(<%= group.avatar(:medium) %>)"></div>
+      <% else %>
+        <div class="background_no_image" style="background-image: url('../images/no_image.png')"></div>
+      <% end %>
+        <p><%= group.name %></p>
     <% end %>
+    <li class="group_delete">
+      <%= link_to "/groups/#{group.id}", method: :delete do %>
+        <span class="glyphicon glyphicon-trash" aria-hidden="true" style="color: white;" ></span>
+      <% end %>
+    </li>
+    </div>
   </div>
-</div>
