#group_change グループ一覧ページの画像を一旦非表示にする

--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,6 +1,11 @@
 <div class="container">
   <div class="row group_elements">
     <%= render partial: "group", collection: @groups %>
+    <div class="group_partial col-sm-3 col-xs-12">
+      <div class="create_group">
+         <a data-toggle="modal" href="#myModal">Create New Group</a>
+      </div>
+    </div>
   </div>
 
   <% if @groups.blank? %>
