--- a/app/views/layouts/default_layout.html.erb
+++ b/app/views/layouts/default_layout.html.erb
@@ -47,8 +47,8 @@
             <% end %>
           </li>
 
-          <li><a data-toggle="modal" href="#myModal">グループを追加する</a>
-          </li>
+     <!-- <li><a data-toggle="modal" href="#myModal">グループを追加する</a>
+          </li> -->
 
         <% elsif controller.controller_name == "pages" %>
           <li>
