--- a/app/assets/stylesheets/groups.scss
+++ b/app/assets/stylesheets/groups.scss
@@ -10,7 +10,7 @@
 }
 
 .group_partial {
-  height: 250px;
+  height: 120px;
   //margin: 10px 10px 0 10px;
   padding: 10px;
 }
@@ -18,12 +18,13 @@
 .group_page {
   position: relative;
   height: 100%;
+  background-color: #3F464C;
 }
 
-.group_page .background_image {
-  width: 100%;
-  height: 100%;
-}
+// .group_page .background_image {
+//   width: 100%;
+//   height: 100%;
+// }
 
 .background_no_image {
   background-size: cover;
@@ -34,22 +35,22 @@
 
 .group_page p {
   width: 100%;
-  color: #000000;
-  font-size: 15px;
+  height: 100%;
+  color: #ffffff;
+  font-size: 20px;
   text-align: center;
-  background-color: #ffffff;
-  opacity: 0.8;
-  position: absolute;
-  bottom: 0;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  margin-bottom: -0.5px;
+  line-height: 5;
+  margin-bottom: 0;
 }
 
 .group_page p:hover {
   // color: #18bc9c;
-  color: #000000;
-  text-decoration: underline;
+  color: #ffffff;
+  background-color: #58626B;
+}
+
+.group_page a:hover {
+  text-decoration: none;
 }
 
 .group_delete {
@@ -81,36 +82,49 @@
   margin-bottom: 20px;
 }
 
+.create_group {
+  height: 100%;
+  background-color: #62AB77;
+  text-align: center;
+}
+
+.create_group a {
+  width: 100%;
+  height: 100%;
+  color: #ffffff;
+  font-size: 15px;
+  line-height: 7;
+  margin-bottom: 0;
+}
+
+.create_group:hover {
+  color: #ffffff;
+  background-color: #6EBF85;
+  text-decoration: none;
+}
+
+.create_group a:hover {
+  color: #ffffff;
+  text-decoration: none;
+}
+
+
 
 @media (max-width:767px) {
   .group_partial {
-  height: 250px;
+  height: 120px;
   margin: 0 auto;
   }
 
   .group_partial .group_page .background_image {
   //width: 340px;
-  height: 250px;
-  }
-
-  .group_partial .group_page p {
-  //width: 340px;
-  // color: #000000;
-  // font-size: 15px;
-  // text-align: center;
-  // background-color: #ffffff;
-  // opacity: 0.8;
-  // position: absolute;
-  // bottom: 0;
-  // padding-top: 5px;
-  // padding-bottom: 5px;
-  // margin-bottom: -0.5px;
+  height: 100%;
   }
 
   .background_no_image {
   background-size: cover;
   //width: 340px;
-  height: 250px;
+  height: 100%;
   background-position: center
   }
 }
