「ページを保存する」ボタンを非表示にする

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -7,6 +7,7 @@
   <% if @pages.blank? %>
     <div class="first_alert">
       <p>グループでシェアする<a data-toggle="modal" href="#myModal">ページを保存しましょう！</a></p>
+      <p>ページの保存は下の＋ボタンからできます。</p>
     </div>
   <% end %>
 
