--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -8,6 +8,10 @@
   padding: 10px;
 }
 
+.page_partial>a {
+  display: block;
+}
+
 .page_page {
   position: relative;
   height: 100%;
@@ -26,10 +30,11 @@
   bottom: 0;
 }
 
-.page_partial .page_title a {
+.page_partial .page_title p {
   color: #000000;
   height: 100%;
   width: 100%;
+  margin-bottom: 0;
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 2;
@@ -37,7 +42,7 @@
   text-overflow: ellipsis;
 }
 
-.page_partial .page_title a:hover {
+.page_partial .page_title p:hover {
   text-decoration: underline;
 }
 
@@ -58,8 +63,8 @@
 .page_delete {
   list-style: none;
   position: absolute;
-  top: 5px;
-  right: 5px;
+  top: 20px;
+  right: 20px;
 }
 
 .plus_btn img {
