--- a/app/views/pages/_page.html.erb
+++ b/app/views/pages/_page.html.erb
@@ -1,23 +1,21 @@
 
 <div class="page_partial col-sm-4 col-xs-12">
-  <div class="page_page" style="background-image: url(<%= page.image_url %>); background-size: cover;">
+  <a href="<%= page.url %>" target="_blank" class="page_page" style="background-image: url(<%= page.image_url %>); background-size: cover;">
     <div class="page_title">
-      <%= link_to "#{page.title}", "#{page.url}", target: "_blank" %>
+      <p><%= page.title %></p>
     </div>
-      <div>
-        <div class="page_avatar_image">
-          <% if page.user.fb_image.blank? %>
-            <%= image_tag("#{page.user.avatar(:small)}") %>
-          <% else %>
-            <%= image_tag("#{page.user.fb_image}") %>
-          <% end %>
-        </div>
-        <li class="page_delete">
-        <%= link_to "/groups/#{@group.id}/pages/#{page.id}", method: :delete do %>
-        <span class="glyphicon glyphicon-trash" aria-hidden="true" style="color: white;"></span>
+      <div class="page_avatar_image">
+        <% if page.user.fb_image.blank? %>
+          <%= image_tag("#{page.user.avatar(:small)}") %>
+        <% else %>
+          <%= image_tag("#{page.user.fb_image}") %>
         <% end %>
-          </li>
       </div>
-  </div>
+      <li class="page_delete">
+      <%= link_to "/groups/#{@group.id}/pages/#{page.id}", method: :delete do %>
+      <span class="glyphicon glyphicon-trash" aria-hidden="true" style="color: white;"></span>
+      <% end %>
+      </li>
+  </a>
 </div>
 
