グループ一覧に「My Group」の文言追加

--- a/app/assets/stylesheets/groups.scss
+++ b/app/assets/stylesheets/groups.scss
@@ -9,6 +9,11 @@
   margin: 0 auto;
 }
 
+.my_group {
+  margin-left: 20px;
+  font-size: 15px;
+}
+
 .group_partial {
   height: 120px;
   //margin: 10px 10px 0 10px;
