--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,4 +1,5 @@
 <div class="container">
+  <p class="my_group"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>  My Group</p>
   <div class="row group_elements">
     <%= render partial: "group", collection: @groups %>
     <div class="group_partial col-sm-3 col-xs-12">
