--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -30,10 +30,12 @@
   width: 170px;
   height: 170px;
   margin: auto 0;
-  margin-right: 20px;
+  // margin-right: 20px;
   padding-top: 10px;
   padding-bottom: 180px;
   float: left;
+  padding-right: 0;
+  padding-left: 0;
 }
 
 .user_partial_invite form {
@@ -41,7 +43,8 @@
 }
 
 .search_result {
-  margin: 20px 0;
+  margin: 20px 20px;
+  font-size: 15px;
 }
 
 .user_image {
