--- a/app/views/groups/_search.html.erb
+++ b/app/views/groups/_search.html.erb
@@ -13,7 +13,7 @@
     </div>
   </div>
     <!-- 検索画面モーダル開始 -->
-  <div class="modal fade" id="myModal_search">
+  <div class="modal fade keyword" id="myModal_search">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
@@ -21,8 +21,11 @@
           <p class="modal-title">キーワードで検索する</p>
         </div>
       <%= form_tag("/searches/search", method: :get) do %>
+        <div class="keyword_search">
+        <i class="glyphicon glyphicon-search"></i>
         <input type="text", autofocus, placeholder="キーワードで検索", name="title", html: {class: "form-controll">
         <label><input type="submit" value="" id="search"></label>
+        </div>
       <% end %>
       </div>
     </div>
