--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,34 +1,24 @@
 <div class="container">
 	<div class="row">
-	<div class="profile_image col-sm-4 col-xs-4">
-		<%= image_tag("#{current_user.avatar(:thumb)}") %>
-	</div>
-	<div clas="user_profile col-sm-8 col-xs-8">
-		<div class="profile_user_name">
-			<%= current_user.nickname %>
+		<div class="profile_image col-sm-4 col-xs-12">
+        <% if current_user.fb_image.blank? %>
+			<%= image_tag("#{current_user.avatar(:profile)}") %>
+		<% else %>
+			<%= image_tag("#{current_user.fb_image}") %>
+		<% end %>
 		</div>
-		<div>
-			<p>プロフィールを編集する</p>
+		<div class="user_profile col-sm-8 col-xs-12">
+			<div class="profile_user_name">
+				<%= current_user.nickname %>
+			</div>
+			<li class="profile_edit">
+				<a href="#">プロフィールを編集する</a>
+			</li>
 		</div>
 	</div>
-	<div clss="my_pages">
-	  <div class="row page_elements">
-	    <%= render partial: "page", collection: @pages %>
-	  </div>
-
-
-
-
-
-
-
-
-	</div>
-
-
-
-
-
-
-	</div>
+		<div class="my_pages">
+		  <div class="row page_elements">
+		    <%= render partial: "page", collection: @pages %>
+		  </div>
+		</div>
 </div>
