--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -182,9 +182,19 @@ h2 {
   .profile_image {
     height:150px;
   }
-
+  .profile_user_name {
+    font-size: 20px;
+    font-weight: bold;
+    color: #0d3c5f;
+    letter-spacing: 1.5px;
+  }
   .user_profile {
-    height: 150px;
+    height: 110px;
+    text-align: center;
+  }
+
+  .user_profile li {
+    display: none;
   }
 
 }
