--- a/app/assets/stylesheets/default_application.scss
+++ b/app/assets/stylesheets/default_application.scss
@@ -149,9 +149,38 @@ li.search a:hover {
   display: none;
 }
 
+
+@media (min-width:768px) {
+  .sp_my_page {
+    display: none;
+  }
+}
+
 @media (max-width:767px) {
+  .logo {
+    margin-left: 30px;
+  }
+
   .name {
     display: none;
+  }
+
+  .sp_my_page {
+    float: right;
+    margin-right: 20px;
+    margin-top: 14px;
+    zoom: 1.3;
+  }
+
+  .sp_my_page a {
+    font-size: 15px;
+    color: #0d3c5f;
+  }
+
+  .sp_my_page a:hover {
+    font-size: 15px;
+    color: #0d3c5f;
+    text-decoration: none;
   }
 
   .pc_search {
