--- a/app/assets/stylesheets/devise.scss
+++ b/app/assets/stylesheets/devise.scss
@@ -3,6 +3,7 @@ html body {
 }
 
 .wide_screen {
+  width: 100%;
   background-image: url('/images/wide_image.jpg');
   /* 画像を常に天地左右の中央に配置 */
   background-position: center center;
@@ -13,7 +14,7 @@ html body {
   /* 表示するコンテナの大きさに基づいて、背景画像を調整 */
   background-size: cover;
   /*position: relative;*/
-  /*position: fixed;*/
+  position: fixed;
 }
 
 .message h1 {
@@ -23,6 +24,20 @@ html body {
   font-family: 'Fugaz One', cursive;
   margin: 0;
   margin-left: 25px;
+}
+
+.message_wrapper {
+  padding-right: 0;
+  padding-left: 0;
+}
+
+.message {
+  width: 100%;
+}
+
+.devise_wrapper {
+  padding-right: 0;
+  padding-left: 0;
 }
 
 .devise_container {
@@ -62,18 +77,39 @@ html body {
   margin-top: 30px;
 }
 
+@media (min-width: 768px) {
+  .mail_login {
+    display: inline-block;
+  }
+}
+
 @media (max-width:767px) {
   .message {
-  padding-top: 80px;
+  padding-top: 180px;
   }
 
   .devise_container {
     margin-top: 50px;
+    background-color: transparent;
   }
 
   html body {
     height: 100%;
   }
+
+  .mail_login {
+    display: none;
+  }
+
+  .devise {
+    display: none;
+  }
+
+  .facebook_login img {
+    width: 200px;
+    margin-top: 100px;
+  }
+
 }
 
 .message_wrapper {
