--- a/app/assets/stylesheets/default_application.scss
+++ b/app/assets/stylesheets/default_application.scss
@@ -158,8 +158,23 @@ li.search a:hover {
 
 @media (max-width:767px) {
   .logo {
-    margin-left: 30px;
+    text-align: center;
+    padding: 0;
+    margin: 0;
   }
+
+  .navbar-toggle {
+  position: relative;
+  float: left;
+  padding: 9px 10px;
+  margin-top: 12px;
+  margin-left: 25px;
+  margin-bottom: 8px;
+  background-color: #000000;
+  background-image: none;
+  border: 1px solid transparent;
+  border-radius: 4px;
+}
 
   .name {
     display: none;
@@ -167,9 +182,9 @@ li.search a:hover {
 
   .sp_my_page {
     float: right;
-    margin-right: 20px;
-    margin-top: 14px;
-    zoom: 1.3;
+    margin-right: 10px;
+    margin-top: 10px;
+    zoom: 1.5;
   }
 
   .sp_my_page a {
@@ -190,8 +205,8 @@ li.search a:hover {
   .sp_search {
     display: block;
     float: right;
-    margin-top: 13px;
-    margin-right: 15px;
-    zoom: 1.4;
+    margin-top: 10px;
+    margin-right: 18px;
+    zoom: 1.5;
   }
 }
