--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,4 +1,5 @@
 <div class="container">
+  <% if !@groups.blank? %>
     <div id="search_result">
       <p class="my_group"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>  My Group</p>
       <div class="row group_elements">
@@ -10,8 +11,7 @@
       </div>
       </div>
     </div>
-
-  <% if @groups.blank? %>
+  <% elsif @groups.blank? %>
     <div class="first_alert">
       <p>Shares!は、グループ間で読みたい記事やお店の情報をシェアできるサービスです。</p>
       <p>まずは、<a data-toggle="modal" href="#myModal">グループを作成</a>するか、すでにグループに所属している友人にグループに招待してもらいましょう！</p>
