--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -14,7 +14,7 @@
     <h2>
       <p class="devise">Sign up</p>
     </h2>
-      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), :html => {:multipart => true}) do |f| %>
         <%= devise_error_messages! %>
       <!-- <div class="form-horizontal"> -->
         <div class="form-group"><%= f.label :Nickname, class: "controll-label" %><br />
