--- a/app/assets/stylesheets/groups.scss
+++ b/app/assets/stylesheets/groups.scss
@@ -74,13 +74,13 @@
   margin: 30px 0 50px 0;
 }
 
-.plus_btn img {
-  width: 60px;
-  height: 60px;
-  position: fixed;
-  right: 30px;
-  bottom: 30px;
-}
+// .plus_btn img {
+//   width: 60px;
+//   height: 60px;
+//   position: fixed;
+//   right: 30px;
+//   bottom: 30px;
+// }
 
 #myModal_search form {
   text-align: center;
