--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,8 +11,8 @@
 			<div class="profile_user_name">
 				<%= current_user.nickname %>
 			</div>
-			<li class="profile_edit">
-				<a href="#">プロフィールを編集する</a>
+			<li class="go_to_group">
+				<a href="/">グループ一覧を見る</a>
 			</li>
 		</div>
 	</div>
