グループ一覧：並び順を最新順に変更、ゴミ箱を削除

--- a/app/views/groups/_group.html.erb
+++ b/app/views/groups/_group.html.erb
@@ -10,11 +10,11 @@
         <%# end %>-->
           <p><%= group.name %></p>
       <% end %>
-      <li class="group_delete">
-        <%= link_to "/groups/#{group.id}", method: :delete do %>
-          <span class="glyphicon glyphicon-trash" aria-hidden="true" style="color: white;" ></span>
-        <% end %>
-      </li>
+      <!-- <li class="group_delete"> -->
+        <%#= link_to "/groups/#{group.id}", method: :delete do %>
+          <!-- <span class="glyphicon glyphicon-trash" aria-hidden="true" style="color: white;" ></span> -->
+        <%# end %>
+      <!-- </li> -->
     </div>
   </div>
 <% end %>
